# MyLearnOpenGl

./: .gitignore  createWindow.sln
Gl_RotatingCube/: CMakeLists.txt  README.md  createWindow.vcxproj  main.cpp  wuziqiGl.props
Gl_RotatingCube/CallBack/: callback.cpp  callback.h  mouse_click_callback.h
Gl_RotatingCube/ShaderReader/: MyShader.cpp  MyShader.h
Gl_RotatingCube/TextureManager/: TextureManager.cpp  TextureManager.h
Gl_RotatingCube/cube/: GlCubePainter.cpp
Gl_RotatingCube/shader/squareShader/: fragmentShaderSquare.txt
Gl_RotatingCube/src/GlfwConfigure/: GlfwConfigure.cpp  GlfwConfigure.h
Gl_RotatingCube/src/ShaderReader/: ShaderBuilder.h
Gl_RotatingCube/src/ShaderReader/FIleManager/: FileManagerControler.cpp  FileManagerControler.h
Gl_RotatingCube/src/TextureManager/: TextureManager.cpp
Gl_RotatingCube/src/cube/: GlCubePainter.h  GlPainter.h
createWindow/: CMakeLists.txt  createWindow.vcxproj  createWindow.vcxproj.filters  main.cpp
createWindow/CallBack/: mouse_click_callback.cpp
createWindow/ShaderReader/: MyShader.cpp  MyShader.h  ShaderManager.h
createWindow/ShaderReader/FIleManager/: FileManagerControler.cpp  FileManagerControler.h  WFIleTextManager.cpp  WFIleTextManager.h
createWindow/TextureManager/: TextureManager.cpp  TextureManager.h
createWindow/cube/: GlCubePainter.cpp  GlCubePainter.h  GlPainter.cpp  ShaderManager.cpp  ShaderManager.h  setCube.h
createWindow/shader/squareShader/: fragmentShaderSquare.txt  fragmentShaderSquareCenter.txt  vertextShaderSquare.txt  vertextShaderSquareCenter.txt
